@startuml

title __APP's Class Diagram__\n

  namespace com.example.bucklingcalculator {
    class com.example.bucklingcalculator.BuildConfig {
    }
  }
  

  namespace com.example.bucklingcalculator {
    class com.example.bucklingcalculator.models.Chart {
    }
  }
  

  namespace com.example.bucklingcalculator {
    class com.example.bucklingcalculator.models.CrossSections {
    }
  }
  

  namespace com.example.bucklingcalculator {
    class com.example.bucklingcalculator.CrossSectionsActivity {
    }
  }
  

  namespace com.example.bucklingcalculator {
    class com.example.bucklingcalculator.adapters.CrossSectionsAdapter {
    }
  }
  

  namespace com.example.bucklingcalculator {
    class com.example.bucklingcalculator.ForceLineChartActivity {
    }
  }
  

  namespace com.example.bucklingcalculator {
    class com.example.bucklingcalculator.MainActivity {
    }
  }
  

  namespace com.example.bucklingcalculator {
    class com.example.bucklingcalculator.models.Materials {
    }
  }
  

  namespace com.example.bucklingcalculator {
    class com.example.bucklingcalculator.MaterialsActivity {
    }
  }
  

  namespace com.example.bucklingcalculator {
    class com.example.bucklingcalculator.MaterialsAdapter {
    }
  }
  

  namespace com.example.bucklingcalculator {
    class com.example.bucklingcalculator.models.Results {
    }
  }
  

  namespace com.example.bucklingcalculator {
    class com.example.bucklingcalculator.ResultsAdapter {
    }
  }
  

  namespace com.example.bucklingcalculator {
    class com.example.bucklingcalculator.SettingsActivity {
    }
  }
  

  namespace com.example.bucklingcalculator {
    class com.example.bucklingcalculator.ShareActivity {
    }
  }
  

  namespace com.example.bucklingcalculator {
    class com.example.bucklingcalculator.SplashActivity {
    }
  }
  

  namespace com.example.bucklingcalculator {
    class com.example.bucklingcalculator.StressLineChartActivity {
    }
  }
  

  com.example.bucklingcalculator.CrossSectionsActivity .up.|> android.content.SharedPreferences.OnSharedPreferenceChangeListener
  com.example.bucklingcalculator.CrossSectionsActivity -up-|> androidx.appcompat.app.AppCompatActivity
  com.example.bucklingcalculator.adapters.CrossSectionsAdapter -up-|> androidx.recyclerview.widget.RecyclerView.Adapter
  com.example.bucklingcalculator.ForceLineChartActivity .up.|> android.content.SharedPreferences.OnSharedPreferenceChangeListener
  com.example.bucklingcalculator.ForceLineChartActivity -up-|> androidx.appcompat.app.AppCompatActivity
  com.example.bucklingcalculator.MainActivity .up.|> android.content.SharedPreferences.OnSharedPreferenceChangeListener
  com.example.bucklingcalculator.MainActivity -up-|> androidx.appcompat.app.AppCompatActivity
  com.example.bucklingcalculator.MaterialsActivity .up.|> android.content.SharedPreferences.OnSharedPreferenceChangeListener
  com.example.bucklingcalculator.MaterialsActivity -up-|> androidx.appcompat.app.AppCompatActivity
  com.example.bucklingcalculator.MaterialsAdapter -up-|> androidx.recyclerview.widget.RecyclerView.Adapter
  com.example.bucklingcalculator.ResultsAdapter -up-|> androidx.recyclerview.widget.RecyclerView.Adapter
  com.example.bucklingcalculator.SettingsActivity .up.|> android.content.SharedPreferences.OnSharedPreferenceChangeListener
  com.example.bucklingcalculator.SettingsActivity -up-|> androidx.appcompat.app.AppCompatActivity
  com.example.bucklingcalculator.ShareActivity -up-|> androidx.appcompat.app.AppCompatActivity
  com.example.bucklingcalculator.SplashActivity -up-|> androidx.appcompat.app.AppCompatActivity
  com.example.bucklingcalculator.StressLineChartActivity .up.|> android.content.SharedPreferences.OnSharedPreferenceChangeListener
  com.example.bucklingcalculator.StressLineChartActivity -up-|> androidx.appcompat.app.AppCompatActivity


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
